src/objects/Actualizacion_masiva_de_registros__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Actualizará los objetos Información financiera, información comité y Referenciación y verificación desde la Radicación y se actualizará el objeto paz y salvo desde la solicitud de crédito</description>
    <fields>
        <fullName>Campo_Id__c</fullName>
        <label>Campo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campo_destino__c</fullName>
        <label>Campo destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campo_origen__c</fullName>
        <label>Campo origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto_destino__c</fullName>
        <label>Objeto destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto_origen__c</fullName>
        <label>Objeto origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Actualización masiva de registros</label>
</CustomObject>